feat: better kpis and precision fix (#5)
* feat: better kpis, fixs, sync, precision

* feat: rm useless migration

* feat: pending assets route ?

* feat: rm estimation

* feat: rm estimation

* feat: fix/refacto indexer state

* feat: dynamic underlying decimals

* fix: response formats + redeems route rename

---------
